--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "jotai": "^1.8.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
